# Autonomous-System-Platform

./: README.md
Micro-XRCE-DDS-Agent/: CMakeLists.txt
PX4-Autopilot_ASP/: .gitignore  .gitmodules  README.md
PX4-Autopilot_ASP/Tools/simulation/gz/models/collapsed_house/: model.sdf
PX4-Autopilot_ASP/Tools/simulation/gz/models/collapsed_industrial_building/: model.sdf
PX4-Autopilot_ASP/Tools/simulation/gz/models/collapsed_industrial_building/meshes/: collapsed_industrial.dae
PX4-Autopilot_ASP/Tools/simulation/gz/models/falling_rock_4/: model.config  model.sdf
PX4-Autopilot_ASP/Tools/simulation/gz/models/falling_rock_4/meshes/: FallingRock04.dae  FallingRock04_Collider.dae
PX4-Autopilot_ASP/Tools/simulation/gz/models/hatchback/: model.sdf
PX4-Autopilot_ASP/Tools/simulation/gz/models/marker_0/: model.sdf
PX4-Autopilot_ASP/Tools/simulation/gz/models/marker_0/meshes/: marker_0.dae
PX4-Autopilot_ASP/Tools/simulation/gz/models/marker_1/: model-1_4.sdf  model-1_5.sdf  model.config  model.sdf
PX4-Autopilot_ASP/Tools/simulation/gz/models/marker_10/: model.config  model.sdf
PX4-Autopilot_ASP/Tools/simulation/gz/models/marker_2/: model-1_4.sdf  model-1_5.sdf  model.config  model.sdf
PX4-Autopilot_ASP/Tools/simulation/gz/models/marker_3/: model-1_4.sdf  model-1_5.sdf  model.config  model.sdf
PX4-Autopilot_ASP/Tools/simulation/gz/models/marker_4/: model-1_4.sdf  model-1_5.sdf  model.config  model.sdf
PX4-Autopilot_ASP/Tools/simulation/gz/models/marker_5/: model-1_4.sdf  model-1_5.sdf  model.config  model.sdf
PX4-Autopilot_ASP/Tools/simulation/gz/models/marker_6/: model-1_4.sdf  model-1_5.sdf  model.config  model.sdf
PX4-Autopilot_ASP/Tools/simulation/gz/models/marker_7/: model.config  model.sdf
PX4-Autopilot_ASP/Tools/simulation/gz/models/marker_8/: model-1_4.sdf  model-1_5.sdf  model.config  model.sdf
PX4-Autopilot_ASP/Tools/simulation/gz/models/marker_9/: model.config  model.sdf
PX4-Autopilot_ASP/Tools/simulation/gz/models/oak_tree/: model.sdf
PX4-Autopilot_ASP/Tools/simulation/gz/models/simple_baylands/: model.config  model.sdf
PX4-Autopilot_ASP/Tools/simulation/gz/models/tunnel_wall_debris/: metadata.pbtxt  model.config  model.sdf
PX4-Autopilot_ASP/Tools/simulation/gz/models/x1_config_5/: default.sdf  model.config  model.sdf
PX4-Autopilot_ASP/Tools/simulation/gz/models/x500_gimbal/: model.sdf
PX4-Autopilot_ASP/Tools/simulation/gz/worlds/: default.sdf
utilities_pkg/: README.md
utilities_pkg/gazebo_env_setup/: CMakeLists.txt  package.xml
utilities_pkg/gazebo_env_setup/config/: asp_final_proj.rviz
utilities_pkg/gazebo_env_setup/launch/: bridge_and_tf.launch.py  pose_tf_broadcaster.launch.py  topic_bridge.launch.py  turn_interfaces.launch.py
utilities_pkg/gazebo_env_setup/src/: pose_tf_broadcaster.cpp
utilities_pkg/px4_ros_com/: CMakeLists.txt  package.xml
utilities_pkg/px4_ros_com/src/examples/offboard/: offboard_control.cpp  offboard_control_srv.cpp
utilities_pkg/px4_ros_com/src/examples/simple_controller/: cli_pose_command.cpp  keyboard_velocity_teleop.cpp
utilities_pkg/utilities_pkg/: CMakeLists.txt  package.xml
utilities_pkg/utilities_pkg/src/: keyboard_control_node.cpp  mission_timer.cpp
(+12 files in other folders)
