<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>gazebo_env_setup</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="dudfhr3349@gmail.com">youngrok</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2_ros</depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>px4_ros_com</exec_depend>


  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
